@@ -23,38 +23,35 @@ import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.data.item.server.entity.ItemDescriptionType;
-import com.echothree.model.data.user.common.pk.UserVisitPK;
 import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.message.ExecutionErrors;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
+import com.echothree.util.server.control.BasePaginatedMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 public class GetItemDescriptionTypesCommand
-        extends BaseMultipleEntitiesCommand<ItemDescriptionType, GetItemDescriptionTypesForm> {
+        extends BasePaginatedMultipleEntitiesCommand<ItemDescriptionType, GetItemDescriptionTypesForm> {
 
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.ItemDescriptionType.name(), SecurityRoles.List.name())
-                        )))
-                )));
+                ))
+        ));
         
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("ParentItemDescriptionTypeName", FieldType.ENTITY_NAME, false, null, null)
-                ));
+        );
     }
     
     /** Creates a new instance of GetItemDescriptionTypesCommand */
@@ -62,21 +59,41 @@ public class GetItemDescriptionTypesCommand
         super(COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
 
-    ItemDescriptionType parentItemDescriptionType;
+    private ItemDescriptionType parentItemDescriptionType;
     
     @Override
-    protected Collection<ItemDescriptionType> getEntities() {
+    protected void handleForm() {
         var itemControl = Session.getModelController(ItemControl.class);
         var parentItemDescriptionTypeName = form.getParentItemDescriptionTypeName();
+
+        parentItemDescriptionType = parentItemDescriptionTypeName == null ? null : itemControl.getItemDescriptionTypeByName(parentItemDescriptionTypeName);
+
+        if(parentItemDescriptionTypeName != null && parentItemDescriptionType == null) {
+            addExecutionError(ExecutionErrors.UnknownParentItemDescriptionTypeName.name(), parentItemDescriptionTypeName);
+        }
+    }
+
+    @Override
+    protected Long getTotalEntities() {
+        if(hasExecutionErrors())
+            return null;
+
+        var itemControl = Session.getModelController(ItemControl.class);
+
+        return parentItemDescriptionType == null
+                ? itemControl.countItemDescriptionTypes()
+                : itemControl.countItemDescriptionTypesByParentItemDescriptionType(parentItemDescriptionType);
+    }
+
+    @Override
+    protected Collection<ItemDescriptionType> getEntities() {
         Collection<ItemDescriptionType> itemDescriptionTypes = null;
+        
+        if(!hasExecutionErrors()) {
+            var itemControl = Session.getModelController(ItemControl.class);
 
-        parentItemDescriptionType = parentItemDescriptionTypeName == null? null: itemControl.getItemDescriptionTypeByName(parentItemDescriptionTypeName);
-
-        if(parentItemDescriptionTypeName == null || parentItemDescriptionType != null) {
             itemDescriptionTypes = parentItemDescriptionType == null ? itemControl.getItemDescriptionTypes()
                     : itemControl.getItemDescriptionTypesByParentItemDescriptionType(parentItemDescriptionType);
-        } else {
-            addExecutionError(ExecutionErrors.UnknownParentItemDescriptionTypeName.name(), parentItemDescriptionTypeName);
         }
 
         return itemDescriptionTypes;
@@ -90,8 +107,12 @@ public class GetItemDescriptionTypesCommand
             var itemControl = Session.getModelController(ItemControl.class);
             var userVisit = getUserVisit();
 
+            if(session.hasLimit(com.echothree.model.data.item.server.factory.ItemDescriptionTypeFactory.class)) {
+                result.setItemDescriptionTypeCount(getTotalEntities());
+            }
+
             result.setParentItemDescriptionType(parentItemDescriptionType == null ? null : itemControl.getItemDescriptionTypeTransfer(userVisit, parentItemDescriptionType));
-            result.setItemDescriptionTypes(itemControl.getItemDescriptionTypeTransfers(getUserVisit(), entities));
+            result.setItemDescriptionTypes(itemControl.getItemDescriptionTypeTransfers(userVisit, entities));
         }
 
         return result;
